--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,18 @@
   background-color: #f9fafc;
 } */
 
+/* Chrome, Safari, Edge, Opera */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 .stroke-icon {
   width: 20px;
   height: 20px;
