--- a/src/css/utils/variables.scss
+++ b/src/css/utils/variables.scss
@@ -69,7 +69,7 @@
     --page-body-padding : 0 18px 0 18px;
     --header-size: 136px;
     //body font
-    --body-font: "Inter", sans-serif;
+    --body-font: "Outfit", sans-serif;
     --font-ICO: IcoFont;
     --heading_1: 30px;
     --heading_2: 26px;
