--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 @import url("/src/css/theme.css");
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"); */
 
 @import "./css/utils/variables.scss";
 @import "./css/breadcrumb.scss";
@@ -10,8 +11,9 @@
 @import "./css/toggle.css";
 
 :root {
-  font-family: Inter, system-ui, -apple-system, "Segoe UI", "Open Sans",
-    "Helvetica Neue", sans-serif;
+  /* font-family: Inter, system-ui, -apple-system, "Segoe UI", "Open Sans",
+    "Helvetica Neue", sans-serif; */
+    font-family: "Outfit !important";
 }
 
 /* body {
